--- a/app/src/index.html
+++ b/app/src/index.html
@@ -26,6 +26,8 @@
       <h1>Look up a Star</h1>
       <br><label for="name">Star ID:</label><input type="text" id="lookid"></input>
       <br><br><button onclick="App.lookUp()">Look Up a Star</button>
+      <br>
+      <h2 id="givenStarName"></h2>
       <hr>
       <br>
       <span id="status"></span>
